Plant to Flower 1/2
